--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,13 @@ AUTH0_AUDIENCE=https://api.gofindme.com
 
 # Readme.com Integration (optional)
 README_API_KEY=
+
+# Auth0 Configuration (for phone app authentication)
+# Use either AUTH0_DOMAIN or AUTH0_ISSUER_BASE_URL
+AUTH0_DOMAIN=your-tenant.auth0.com
+# OR
+# AUTH0_ISSUER_BASE_URL=https://your-tenant.auth0.com
+AUTH0_AUDIENCE=https://api.gofindme.com
+
+# Internal API Configuration (for Next.js frontend)
+INTERNAL_API_PREFIX=/api/internal
