--- a/package.json
+++ b/package.json
@@ -24,20 +24,25 @@
     "db:introspect": "prisma db pull",
     "prepare": "husky install"
   },
-  "keywords": ["fastify", "typescript", "api", "server"],
+  "keywords": [
+    "fastify",
+    "typescript",
+    "api",
+    "server"
+  ],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.26.0",
   "dependencies": {
-    "@prisma/client": "^6.1.0",
-    "fastify": "^5.6.2",
     "@fastify/cors": "^10.0.1",
+    "@fastify/env": "^5.0.1",
     "@fastify/helmet": "^12.0.1",
     "@fastify/rate-limit": "^10.1.1",
     "@fastify/swagger": "^9.1.0",
     "@fastify/swagger-ui": "^5.0.1",
-    "@fastify/env": "^5.0.1",
+    "@prisma/client": "^6.1.0",
     "dotenv": "^16.4.5",
+    "fastify": "^5.6.2",
     "jose": "^5.9.6",
     "nanoid": "^5.0.7",
     "zod": "^3.23.8",
@@ -48,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "2.1.9",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
