--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:introspect": "prisma db pull",
-    "prepare": "husky install"
+    "db:introspect": "prisma db pull"
   },
   "keywords": [
     "fastify",
@@ -58,7 +57,6 @@
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
